--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <header>
         <div class="logo-container">
-            <img class="logo1" src="#">
+            <img class="logo1" src="./fruits.webp">
         </div>
         <div class="nav-container">
-            <a class="nav-text" href="index.html">Page d'accueil</a>
+            <a class="nav-text" href="#">Page d'accueil</a>
             <a class="nav-text" href="produits.php">Nos produits</a>
         </div>
         <div class="sign-container">
@@ -21,7 +21,7 @@
             <a class="search-btn" href="#">
                 <i class="fa fa-search" aria-hidden="true"></i>
             </a>
-            <a class="sign-text" href="Inscription.php">Inscription</a>
+            <a class="sign-text" href="inscription.php">Inscription</a>
         </div>
     </header>
     <hr>
